--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .env
 .venv/
-tools/credentials.json
-tools/token.json
-tools/__pycache__/
+agenttools/credentials.json
+agenttools/token.json
+agenttools/__pycache__/
 token.json
 __pycache__/
