--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ attrs==25.3.0
 beautifulsoup4==4.13.5
 cachetools==5.5.2
 certifi==2025.8.3
+cffi==2.0.0
 cfgv==3.4.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+cryptography==46.0.1
 distlib==0.4.0
 distro==1.9.0
 filelock==3.19.1
@@ -43,10 +45,12 @@ protobuf==6.32.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pycodestyle==2.14.0
+pycparser==2.23
 pydantic==2.11.7
 pydantic-core==2.33.2
 pydantic-settings==2.10.1
 pyflakes==3.4.0
+pyjwt==2.10.1
 pyparsing==3.2.3
 python-dotenv==1.1.1
 python-multipart==0.0.20
@@ -69,3 +73,22 @@ uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.35.0
 virtualenv==20.34.0
+vonage==4.6.0
+vonage-account==1.1.1
+vonage-application==2.0.1
+vonage-http-client==1.5.1
+vonage-jwt==1.1.5
+vonage-messages==1.6.2
+vonage-network-auth==1.0.2
+vonage-network-number-verification==1.0.2
+vonage-network-sim-swap==1.1.2
+vonage-number-insight==1.0.7
+vonage-numbers==1.0.4
+vonage-sms==1.1.6
+vonage-subaccounts==1.0.4
+vonage-users==1.2.1
+vonage-utils==1.1.4
+vonage-verify==2.1.0
+vonage-verify-legacy==1.0.1
+vonage-video==1.5.0
+vonage-voice==1.4.0
